added background color

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My 5 Dream Vacation Locations</h1>
+    <h1>MY 5 DREAM VACATION LOCATIONS</h1>
     <hr>
     <div>
         <ol>
-            <li> <a href="Diani, Kenya"></a>Diani, Kenya</li>
-            <li>Dubai, United Arab Emirates</li>
-            <li>The Great Wall, China</li>
-            <Li>Kuala Lumpur, Malaysia</Li>
-            <li>The Taj Mahal, India</li>
+            <li> <a href="#diani-kenya">Diani, Kenya</a></li>
+            <li><a href="#dubai-unitedarabemirates">Dubai, United Arab Emirates</a></li>
+            <li><a href="#thegreatwall-china">The Great Wall, China</a></li>
+            <Li><a href="#kualalumpur-malaysia">Kuala Lumpur, Malaysia</a></Li>
+            <li><a href="#thetajmahal-india">The Taj Mahal, India</a></li>
         </ol>
     </div>
-    <p><h2 id="Diani, Kenya">1. Diani, Kenya</h2></p>
+    <p><h2 id="diani-kenya">1. Diani, Kenya</h2></p>
             <p>I would visit Diani to enjoy the white-sand beach and the crystal-clear turqoise waters and the lush greenery. Experience the swahili culture and explore the coral reefs.</p>
         <p><h3>Activities</h3></p>
     <p><ul><li>Snorkeling and Diving</li>
@@ -56,7 +56,7 @@
 </div>
     <p>
         <hr>
-        <h2>2. Dubai, United Arab Emirates</h2>
+        <h2 id="dubai-unitedarabemirates">2. Dubai, United Arab Emirates</h2>
         <p>I would visit Dubai to experience extra-ordinary feats of architecture and engineering, indulge with the beauty of arabian desert and experince world class shopping and dining.</p>
     </p>
     <p><h3>Activities</h3></p>
@@ -94,7 +94,7 @@
     </p>
     <hr>
     <p>
-        <p><h2>3. The Great Wall, China</h3></p>
+        <p><h2 id="thegreatwall-china">3. The Great Wall, China</h3></p>
         <p>
           I would visit the Great Wall of China to get a chance to walk in the footsteps of history and witness the sheer scale and engineering prowess on ancient wonder as well as experience the breathtaking views surrounding the landscapes.  
         </p>
@@ -135,7 +135,7 @@
 </div>
 <p>
     <hr>
-    <h2>4. Kuala Lumpur, Malysia</h2>
+    <h2 id="kualalumpur-malaysia">4. Kuala Lumpur, Malysia</h2>
     <p>I would love to visit Kuala Lumpur to experince the iconic Petronas Twin Towers and enjoy the delicious street foods and the captivating modern skycrapers.</p>
     <p><h3>Activities</h3></p>
     <p>
@@ -174,7 +174,7 @@
 </div>
 <p>
     <hr>
-    <h2>5. Taj Mahal, India</h2>
+    <h2 id="thetajmahal-india">5. Taj Mahal, India</h2>
     <p>I would Visit the Taj Mahal to discover the iconic symbol of love and architecture. To witness the breathtaking beauty and the details of the UNESCO heritage site and learn the fascinating history</p>
 </p>
 <p><h3>Activities</h3></p>
